update auth file upload
